	Bump version to 0.6.1 for release
	
Sun Sep 28 11:54:03 PM EST 2003 ale <s328940@student.uq.edu.au>
	WACing at 257/300 at 10seconds now.	

Tue Jul 20 06:26:46 AM EST 2004 Alejandro Dubrovsky <alito@organicrobot.com>
	moveorder.c, negascout.c: Implement divide history table by two when max value reached 
	idea by Tord Romstad.
	
Tue Jul 20 05:00:35 PM EST 2004 Alejandro Dubrovsky <alito@organicrobot.com>	
	aleweights:  give more centering value to queen, rook.  Rook bonus for 6th rank too.
	Don't penalise king so strongly for being on third rank.
	eval.c:  Rough king safety implemented (just looks at the three pawns in front of the
	king and their distances)
	
Tue Aug 10 09:41:32 PM EST 2004 Alejandro Dubrovsky <alito@organicrobot.com>
    eval.c:  Add fianchetto bonus to try to avoid predilection for Kf1/8 when bishop in
    fianchetto
    
Tue 2010/09/13 Alejandro Dubrovsky <alito@organicrobot.com>
    board.h, moveorder.h:  Move a couple of functions to the includes to help get them inlined.

Tue 2010/09/14 Alejandro Dubrovsky <alito@organicrobot.com>
    WACing at 272/300 at 10 seconds on a Core 2 Duo E4300

Tue 2010/09/16 Alejandro Dubrovsky <alito@organicrobot.com>
    pieces.c: Make the generate functions take a const Board pointer.
	eval.c: Get rid of king safety.
	
Tue 2010/09/17 Alejandro Dubrovsky <alito@organicrobot.com>
    hashstruct.h: Make the hash chunk 4 bytes smaller.

Tue 2010/09/17 Alejandro Dubrovsky <alito@organicrobot.com>
    unches.c: Make logging line-buffered
    search.c, negascout.c:  When the last move wasn't a capture, don't do a full quiescent check. 
    Only check for legality, and evaluation.
    board.c (generateTentativeQuiescentMoveList): More hypothetical microoptimisations.
    doIO.c: Linebuffer the debug file.
    tools/procvalues.py: Wrap it nicely in optparse.
    negascout.c: Fix case where we do an illegal move on the 100th ply draw case.
    
	