@@ -927,4 +927,6 @@ Tue 2010/09/17 Alejandro Dubrovsky <alito@organicrobot.com>
     tools/procvalues.py: Wrap it nicely in optparse.
     negascout.c: Fix case where we do an illegal move on the 100th ply draw case.
     
+Tue 2010/09/21 Alejandro Dubrovsky <alito@organicrobot.com>
+	negascout.c, search.c: That experiment with not doing a full quiescent search was a failure. Revert.
 	
